--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-class-names": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.13",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
     "next": "15.3.4",
