[dyad] Menambahkan konfigurasi cache ke netlify.toml untuk mengatasi peringatan 'No build cache found' - wrote 1 file(s)

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,7 @@
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+[build.environment]
+  # Enable Next.js build cache
+  NEXT_BUILD_CACHE_DIR = ".next/cache"
